--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,34 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp/
-Library/
-
+[Tt]emp/
+[Oo]bj/
+[Bb]uild
+[Ll]ibrary/
+sysinfo.txt
+*.stackdump
+ 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
-ExportedObj/
-obj/
-*.svd
-*.userprefs
+[Ee]xported[Oo]bj/
+.vs/
+/*.userprefs
 /*.csproj
-*.pidb
-*.suo
-/*.sln
-*.user
-*.unityproj
-*.booproj
-
+/*.pidb
+/*.suo
+/*.sln*
+/*.user
+/*.unityproj
+/*.booproj
+ 
 # ============ #
 # OS generated #
 # ============ #
-.DS_Store
-.DS_Store?
+.DS_Store*
 ._*
 .Spotlight-V100
 .Trashes
+Icon?
 ehthumbs.db
-Thumbs.db
+[Tt]humbs.db
